[metadata]
name = yv
version = 0.0.4
url = https://github.com/t-c-w/yv
platforms = any
description_file = README.md
description = Simple utils to get stuff out of Mappings (dict-like objects).
author = Thor Whalen
license = apache-2.0
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = yv

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
